# THE-Software

./: .gitignore  readme.md  test.sh
THE-LLVMTranslator/: CMakeLists.txt  README.md  THE-Instruction.cpp  THE-Instruction.h  THE-LLVMTranslator.cpp  THE-LLVMTranslator.h
THE-Parser/: .gitignore  .project  README.md
THE-Parser/src/: Derivation.java  Grammar.java  ParserMain.java  THEParser.java  Token.java
THE-Parser/src/utils/: FileIOUtils.java
THE-ProgrammingLanguage/: .gitignore  .project
THE-ProgrammingLanguage/src/instructions/: AddInstr.java  AllocArrInstr.java  AllocVarInstr.java  ArrLengthInstr.java  BitAndInstr.java  BitNotInstr.java  BitOrInstr.java  BoolAndInstr.java  BoolNotInstr.java  BoolOrInstr.java  BreakInstr.java  ConcatInstr.java  ContinueInstr.java  DeclareInstr.java  DivideInstr.java  ElseIfInstr.java  ElseInstr.java  EndBlockInstr.java  EqualInstr.java  FunctionCallInstr.java  FunctionDefInstr.java  GetElementInstr.java  GetPointerInstr.java  GivenInstr.java  GreaterEqualInstr.java  GreaterInstr.java  IdentityInstr.java  IfInstr.java  Instruction.java  LessEqualInstr.java  LessInstr.java  LoadInstr.java  LoopInstr.java  ModuloInstr.java  MultInstr.java  NotEqualInstr.java  PowerInstr.java  PrintInstr.java  QuadInstruction.java  RefEqualInstr.java  (+6 more)
THE-ProgrammingLanguage/src/parsing/: BaseType.java  CompilePass.java  Compiler.java  ErrorHandler.java  Function.java  Instruction.java  InstructionType.java  Main.java  ParseUtil.java  Parser.java  QuadInstruction.java  Routine.java  Type.java  Variable.java
THE-ProgrammingLanguage/src/passes/: ArrayWritesToRefPass.java  (+5 more)
THE-ProgrammingLanguage/testFiles/: Ideas.c  ProgramInput.the  ProgramInput.txt  ProgramOutput.the  QuadIR
